--- a/_posts/study/CS/2022-02-23-26.md
+++ b/_posts/study/CS/2022-02-23-26.md
@@ -92,7 +92,7 @@ toc_sticky: false
 - **PC register**
     - 현재 스레드가 실행되는 부분의 주소와 명령을 저장
     - 스레드가 생성될때 할당됨
-- **Native Method**
+- **Native Method Stack**
     - 자바 외 언어로 작성된 네이티브 코드를 위한 메모리 영역(JNI)
 
 ### Execution Engine
@@ -156,29 +156,84 @@ toc_sticky: false
 
 ## Garbage Collector
 
-![image](https://user-images.githubusercontent.com/71180414/155263019-bc49c7ec-1a2d-4a32-9c4a-4900f71dd3a4.png)
+- 힙 영역에서 참조되지 않는 객체를 주기적으로 검사, 제거하는 메모리 관리 기법
+- 장점
+    - 개발자가 직접 메모리를 관리하지 않아도 됨
+    - 메모리 누수 방지
+    - 해제된 메모리에 대한 접근 방지
+- 단점
+    - 오버헤드가 큼
+    - GC 동작 시점을 개발자가 알 수 없음
 
-- 힙 메모리 영역에서 참조되지 않는 객체를 주기적으로 검사하여 제거함으로써 메모리 누수를 방지
-- 동작방식
-    - **Stop The World**
-        - GC 스레드를 제외한 모든 스레드가 작업을 멈춘다
-        - GC 성능을 개선하기 위한 튜닝을 한다면 이 시간을 줄이는 것
-    - **Mark & Sweep**
-        - Mark : 사용되는 메모리와 사용되지 않는 메모리를 식별하는 작업. Reachability를 계산
-        - Sweep : Mark 단계에서 사용되지 않음으로 식별된 메모리를 해제하는 작업
-- 영역별 동작방식
-    - **Minor GC**
-        - Young 영역(eden, survivor1, survivor2)에서 일어난다
-        1. 새로 생성된 객체는 Eden 영역에 할당됨
-        2. Minor GC가 실행되면 Eden 영역에서 살아남은 객체는 survivor1 영역으로 이동
-        3. Minor GC가 survivor1 영역에서 살아남은 객체는 survivor2 영역으로 이동
-        4. 살아남은 객체는 Age bit에 살아남은 횟수를 기록하고, Age bit가 threshold값 이상이 되거나 survivor영역의 메모리가 부족해지면 old영역으로 이동
-            - 메모리 단편화를 피하기 위해 계속 이동시킴
-            - 이를 Compaction이라고 함
-    - **Major(Full) GC**
-        - Old 영역에서 일어난다
-        - Minor GC보다 10배의 시간이 소요되며, 다른 스레드를 중단시킴
-        1. Old 영역에 메모리가 가득차면 GC 실행
-        2. 참조되지 않는 객체를 한번에 모아서 제거
+<br>
+
+## GC 알고리즘 종류
+
+- GC Root(root space)로 부터 참조되지 않는 객체를 선별해내는 알고리즘
+- GC Root가 될 수 있는 대상
+    - Method 영역의 static 변수
+    - Stack 영역의 로컬 변수
+    - Native Method Stack 영역의 JNI 레퍼런스
+
+### Reference Counting
+
+<img width="268" alt="image" src="https://user-images.githubusercontent.com/71180414/165312773-c5448773-0585-4d6a-bc6b-e976d006cde8.png">
+
+- root space에서부터 heap 객체의 참조횟수(reference couting)를 기록한다
+    - 참조횟수가 0인 객체는 GC 대상이 된다
+- 단 객체끼리 참조하는 순환참조가 일어날 수 있고, 이렇게 되면 해당 객체는 영영 삭제되지 않는다
+
+### Mark and Sweep
+
+<img width="511" alt="image" src="https://user-images.githubusercontent.com/71180414/165313476-d9609aea-972a-4ac4-b1ab-c4edb212feb1.png">
+
+- Mark
+    - 그래프 순회를 통해 사용되는 메모리와 사용되지 않는 메모리를 식별하는 작업
+    -  Reachability를 계산
+- Sweep
+    - Mark 단계에서 사용되지 않음으로 식별된 메모리를 해제하는 작업
+    - 여기서 메모리 단편화를 막기 위한 Compaction이 진행됨
+- 장점 : 순환참조 문제를 해결
+- 단점 : 의도적으로 GC를 실행해야하며, 어플리케이션과 GC 실행이 병행됨
+
+<br>
+
+## GC 실행방식 종류
+
+
+
+<br>
+
+## 자바의 GC 동작원리
+
+- 자바는 Mark and Sweep 방식으로 GC가 동작함
+
+### JVM Heap 영역
+
+<img width="502" alt="image" src="https://user-images.githubusercontent.com/71180414/165315888-530cca26-7b83-45a3-acb7-828e6c85eeb9.png">
+
+- Young Generation
+    - Eden, Survivor 1,0 영역
+    - Minor GC 발생 영역
+- Old Generation
+    - Old 영역
+    - Java 8 이전엔 Perm 영역이 추가로 존재했음
+    - Major GC 발생 영역
+
+### 전체 동작 과정
+
+1. 새로 생성된 객체는 Eden 영역에 할당됨
+2. Eden 영역이 꽉차면 Mark & Sweep 실행
+    - 살아남은 객체들을 Survivor0 영역으로 이동
+    - 이동시키면서 객체의 age bit를 1 증가시킴
+3. 다시 새 객체는 Eden 영역에 할당
+4. Eden 영역이 꽉차면 Eden + Survivor0 영역에서 Mark & Sweep 실행
+    - 두 영역에서 살아남은 객체들을 Survivor1 영역으로 이동
+5. 위 과정을 반복하며 살아남는 객체들은 Survivor0, Survivor1 영역에 번갈아가며 이동
+6. 반복 중 Age bit가 threshold값 이상이 되거나 Survivor 영역의 메모리가 부족해지면 객체를 Old 영역으로 이동 
+    - 이걸 Promotion이라고 함
+    - Java 8 - Parallel GC 방식 기준 threshold = 15
+7. Old 영역이 꽉차게 되면 Mark & Sweep (Major GC) 실행
+    - Minor GC보다 10배의 시간이 소요되며, 다른 스레드를 중단시킴
     
 <br>
