--- a/_posts/tech/Java/2022-03-03-6.md
+++ b/_posts/tech/Java/2022-03-03-6.md
@@ -11,25 +11,33 @@ toc_sticky: false
 
 대충알던 hashcode()와 equals() 동작에 대해 확실하게 살펴보자
 
-## 정의
+## 동일성 vs 동등성
+
+우선 메소드를 살펴보기 앞서 동일성과 동등성의 개념을 알아야 한다.
+
+- 동일성(identity) : 두 객체가 주소까지 완전히 동일한 객체인 경우 만족
+- 동등성(equality) : 두 객체가 가진 정보를 비교해 동등하다 판단되는 경우
+
+## 메소드 정의
 
 - hashcode()와 equals() 모두 조상 클래스인 Object의 메소드이다.
 - 이를 재정의하여 사용하는 것.
 
 ### hashcode()
 
-- 클래스가 가지는 **고유의 값**을 반환하는 메소드
+- 객체가 가지는 **고유의 값**을 반환하는 메소드
 - Object 클래스의 기본 메소드는 객체의 메모리 주소값을 해시코드로 만들어 반환한다
+- `HashMap`과 같은 자료구조에서 동등성 비교를 위해 사용된다.
 
 ### equals()
 
-- 객체의 **해시코드**를 비교하여 동일한지 확인하는 메소드
-- `==`은 메모리 주소값을 비교한다
+- 객체가 가진 정보로 객체의 동등성을 비교한 결과를 나타내는 메소드
+- Object 클래스의 기본 메소드는 객체의 메모리 주소값을 비교한다
+    - `==` 연산도 메모리 주소값을 비교한다
 
 <br>
 
 위의 정의를 본 다음 다음 예제를 살펴보자.
-
 
 ## Object
 
@@ -46,7 +54,7 @@ System.out.println(o1.equals(o2));  // -> false
 ```
 
 위 코드를 실행시켜보면 두 객체의 해시코드가 다르게 나오는 것을 확인할 수 있다.   
-그럼 당연히 해시코드값을 비교하는 equals의 결과도 false가 나온다.   
+재정의하지않은 해시코드는 주소값을 나타내기 때문에, 재정의하지 않은 equals 또한 동일한 결과를 나타낸다.
 (결국 주소값을 비교한것이기 때문에 `==`과 같은 결과인 것)
 
 <br>
@@ -66,9 +74,9 @@ System.out.println(s1.equals(s2));  // -> true
 ```
 
 엥??? String의 경우에는 다른 객체여도 해시코드가 동일하게 나온다.   
-당연히 equals 결과도 true로 찍힌다.   
+equals 결과도 true로 찍힌다.   
 
-왜 이런일이 발생하는 것일까? String의 hashcode를 살펴보자.   
+왜 이런일이 발생하는 것일까? 먼저 String의 hashcode를 살펴보자.   
 
 <div class="sub_title">String의 hashcode</div>
 
@@ -101,10 +109,32 @@ public static int hashCode(byte[] value) {
 
 재정의된 결과를 보면 결국 String 내부의 char 원소의 주소값을 각각 해시값으로 만든 것을 반환한다.   
 따라서 동일한 문자열의 해시코드는 동일하다는 결론이 나오게 된다.   
-(문자열이 동일함 -> 해시코드가 동일함 -> equals에서 true 반환)   
-(근데 사실 String은 불변객체이기 때문에 동일한 문자열이면 애초에 주소값이 같기도 하다 ㅋㅋㅋ)
+즉 해시코드는 **무조건 주소값을 반환하는 것이 아니라, 클래스의 '고유한값'을 나타내는 것이다.**  
 
-즉 해시코드는 **무조건 주소값을 반환하는 것이 아니라, 클래스의 '고유한값'을 나타내는 것이다.**   
+이번엔 String의 equals 메소드를 살펴보자
+
+<div class="sub_title">String의 equals</div>
+
+```java
+public boolean equals(Object anObject) {
+    if (this == anObject) {
+        return true;
+    }
+    if (anObject instanceof String) {
+        String aString = (String)anObject;
+        if (coder() == aString.coder()) {
+            return isLatin1() ? StringLatin1.equals(value, aString.value)
+                                : StringUTF16.equals(value, aString.value);
+        }
+    }
+    return false;
+}
+```
+
+우선 주소값을 먼저 비교하고 또 다른 로직이 추가되어 있다.   
+hashcode 메소드와 똑같은 방식으로 추가적인 동등성 검사를 진행한다.   
+결국 hashcode와 equals 메소드 둘다 같은 방식으로 동등성을 비교한다.
+
 그럼 컬렉션의 경우에는 어떨까?
 
 <br>
@@ -187,6 +217,7 @@ public static int hashCode(int a[]) {
 보아하니 String과 컬렉션에서의 hashcode()와 매우매우 비슷하다.   
 내부 원소를 여러개 가지는 자료구조의 경우, 인스턴스 주소값이 아닌 내부 원소값을 기준으로 해시코드를 생성하는 특징을 가지는 것 같다.
 
+물론 equals 메소드도 이와 비슷하게 동등성 검사를 하도록 구현되어 있다.   
 즉, 두 배열의 원소값이 같은지 비교하고 싶을땐 `Arrays.equals()` 메소드를 사용하면 된다.   
 (물론 원시 타입 배열만 해당 ^^;)
 
@@ -194,10 +225,8 @@ public static int hashCode(int a[]) {
 
 ## 결론
 
-- hashcode()는 클래스의 주소값이 아닌 고유한 값을 나타내는 것이다.
-    - 클래스에서 재정의하기 나름이다.
-    - 하지만 재정의하지 않았다면 Object에서 구현한대로 주소값을 나타낸다.
-- equals()는 hashcode()의 결과값을 비교하는 것이 원칙이므로, 두 메소드는 짝꿍이다.
-    - equals()를 재정의하려면 당연히 hashcode()도 재정의해줘야 한다.
+- equals()와 hashcode() 두 메소드 모두 객체의 동등성을 검사하기 위한 것이다.
+- 한 객체의 동등성 검사 기준은 동일해야 한다.
+    - 즉, 두 메소드 중 하나를 재정의한다면 나머지 하나도 반드시 재정의해줘야 한다!
     
 <br>
