--- a/_posts/study/CS/2022-02-25-27.md
+++ b/_posts/study/CS/2022-02-25-27.md
@@ -175,6 +175,7 @@ toc_sticky: false
 - UnChecked Exception
     - **실행 중** 발생할 수 있는 에러 -> 런타임 시점에서 발생함
     - RuntimeException을 상속받는다.
+- [롤백 관련 참고링크](https://techblog.woowahan.com/2606/)
 
 <br>
 
@@ -241,7 +242,7 @@ toc_sticky: false
 
 <br>
 
-## Syncronized
+## syncronized
 
 - 멀티 스레드 환경에서 동기화 문제를 해결하기 위한 제어자
     - thread-safe한 환경을 만들기 위해 사용
@@ -250,6 +251,20 @@ toc_sticky: false
     - 코드블록을 synchronized 제어자로 감싸주면 된다
     - 인스턴스 단위로 동기화됨 -> 메소드에는 잘 사용하지 않음
 - 제대로 설정하지 않으면 비효율적으로 동작하게 된다
+
+<br>
+
+## volatile
+
+- 변수를 CPU 캐시가 아닌 메인 메모리에서 저장 + 조회할 것을 명시하기 위해 쓰이는 제어자
+    - 변수가 CPU 캐시를 사용하지 않도록 선언하기
+
+![image](https://user-images.githubusercontent.com/71180414/165508370-1b166f85-9551-4aa9-a2ef-a4b10db2f281.png)
+
+- 자바는 성능 향상을 위해 메인 메모리에서 읽은 변수를 CPU 캐시에 저장한다
+- 멀티스레드 환경에서 스레드마다 다른 CPU 캐시를 가지고, 이는 동기화되지 않기 때문에 데이터 무결성 보장 X
+    - 따라서 멀티스레드 환경에서 사용될 변수는 `volatile` 제어자를 붙여 메인메모리만 사용하도록 한다
+    - 물론 동시성 처리는 thread-safe하도록 따로 구현해야함
 
 <br>
 
@@ -267,6 +282,7 @@ toc_sticky: false
 
 - 인터페이스를 implements하는 여러 클래스들의 메소드 구현을 강제하기 위해 사용한다 
     - 다형성을 통해 기능을 **구현**하는것
+- static 필드는 선언 가능
 - 다중 implements가 가능하다
 - java 8부터 default 메소드로 기본 구현이 가능하다
 
