--- a/_posts/study/CS/2022-02-23-26.md
+++ b/_posts/study/CS/2022-02-23-26.md
@@ -157,6 +157,8 @@ toc_sticky: false
 ## Garbage Collector
 
 - 힙 영역에서 참조되지 않는 객체를 주기적으로 검사, 제거하는 메모리 관리 기법
+    - 대부분의 객체는 금방 접근 불가능 상태(unreachable)가 된다.
+    - 오래된 객체에서 젊은 객체로의 참조는 아주 적게 존재한다.
 - 장점
     - 개발자가 직접 메모리를 관리하지 않아도 됨
     - 메모리 누수 방지
@@ -167,7 +169,7 @@ toc_sticky: false
 
 <br>
 
-## GC 알고리즘 종류
+## GC 선별 알고리즘 종류
 
 - GC Root(root space)로 부터 참조되지 않는 객체를 선별해내는 알고리즘
 - GC Root가 될 수 있는 대상
@@ -198,8 +200,28 @@ toc_sticky: false
 
 <br>
 
-## GC 실행방식 종류
+## Major GC 종류
 
+- Major GC에서는 Stop the World가 발생한다.
+    - 힙 영역의 모든 객체를 검사하기 때문에 시간이 오래걸림
+    - Minor GC보다 10배의 시간이 소요되며, 다른 스레드를 중단시킴
+    - Stop the World 발생 횟수를 줄이는 것이 GC 튜닝
+
+### Serial GC
+
+<img width="169" alt="image" src="https://user-images.githubusercontent.com/71180414/165325712-56d5d4c1-4fac-4d29-84d3-0665bc59947f.png">
+
+### Parallel GC
+
+<img width="223" alt="image" src="https://user-images.githubusercontent.com/71180414/165325786-08eb9094-5ffb-4ea5-9ae3-edf18550f52d.png">
+
+### CMS GC
+
+<img width="259" alt="image" src="https://user-images.githubusercontent.com/71180414/165326003-31955ebc-d208-4c4d-956f-01108dcca83b.png">
+
+### G1 GC
+
+![image](https://user-images.githubusercontent.com/71180414/165326170-033609c1-4a4d-4886-82a2-8fc3530ae722.png)
 
 
 <br>
@@ -234,6 +256,10 @@ toc_sticky: false
     - 이걸 Promotion이라고 함
     - Java 8 - Parallel GC 방식 기준 threshold = 15
 7. Old 영역이 꽉차게 되면 Mark & Sweep (Major GC) 실행
-    - Minor GC보다 10배의 시간이 소요되며, 다른 스레드를 중단시킴
     
 <br>
+
+## 참고링크
+
+- [D2 GC 포스팅](https://d2.naver.com/helloworld/1329)
+- [GC 우테코 유튜브](https://www.youtube.com/watch?v=FMUpVA0Vvjw)
