--- a/_posts/study/CS/2022-04-20-34.md
+++ b/_posts/study/CS/2022-04-20-34.md
@@ -25,6 +25,29 @@ toc_sticky: false
 
 <br>
 
+## VO, DTO, DAO, Entity
+
+### VO (Value Object)
+
+- 수정이 불가능한 읽기 전용 객체
+
+### DTO (Data Transfer Object)
+
+- 계층간 데이터 교환을 위한 객체
+- 로직을 가지고 있지 않는 순수한 데이터 객체
+
+### DAO (Data Access Object)
+
+- 데이터베이스에 접근하기 위한 객체
+- 비즈니스 로직과 데이터베이스 연결 로직을 분리하기 위해 사용함
+
+### Entity
+
+- 데이터베이스의 테이블과 매핑되는 객체
+- 각 계층의 책임을 분리하기 위해 Entity를 DTO 객체로 변환하여 사용함
+
+<br>
+
 ## jar vs war
 
 ![image](https://user-images.githubusercontent.com/71180414/160057160-7328cea6-0584-438f-a277-fe2cab368648.png)
