--- a/_posts/study/CS/2022-03-03-31.md
+++ b/_posts/study/CS/2022-03-03-31.md
@@ -128,7 +128,8 @@ JPA 기초 개념 다시 정리하기
         1. 부모엔티티 전체가 삭제되어 모든 자식 엔티티 참조가 끊어짐
         2. 부모엔티티 리스트에서 요소를 삭제하여 해당 자식 엔티티 참조가 끊어짐
     - `@OneToMany(orphanRemoval = true)` 설정해주면 고아객체를 DB에서 자동 삭제해줌
-    - `CascadeType.REMOVE`를 설정한것과 똑같이 동작함
+    - `CascadeType.REMOVE`는 부모객체에게서 전파됨 -> 자식객체까지 삭제되는것
+    - `orphanRemoval`은 고아객체가 된 자식객체만 삭제됨
 
 <br>
 
